Hacky line-height and margin fixes for testimonial pseudo-element alignment

--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ i:active {
     flex-flow: row wrap;
     align-items: flex-start;
     align-content: center;
-    justify-content:space-between;
+    justify-content:space-evenly;
 }
 
 #about img{
@@ -291,13 +291,15 @@ blockquote {
 content: '“';
 font-family: 'Bebas Neue';
 font-style: normal;
-position: absolute;
-left: 40px;
+position: relative;
+left: 10px;
 color: var(--secondary-color);
 font-size: 240px;
+line-height: 10px;
+margin-top: 95px;
 font-weight: 900;
 z-index: -1;
-vertical-align: text-top;
+
 }
 
 #testimonials::after {
@@ -308,7 +310,9 @@ position:relative;
 right: 10px;
 color: var(--secondary-color);
 font-size: 240px;
+line-height: 10px;
 font-weight: 900;
+margin-top: 95px;
 z-index: -1;
 }
 
